# header-pdf-exporter

./: LICENSE  README.md  pyproject.toml
header_pdf_exporter/: __init__.py
header_pdf_exporter/templates/latex_header/: conf.json  index.tex.j2
