[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "header-pdf-exporter"
version = "0.1.0"
authors = [
    { name = "Nicholas Carr", email = "ncarr@users.noreply.github.com" }
]
description = "A pip-installable nbconvert exporter that creates PDFs with a header defined using tagged cells."
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jupyter",
    "nbconvert >=6.0",
]

[project.urls]
repository = "https://github.com/ncarr/header-pdf-exporter"

[project.entry-points."nbconvert.exporters"]
pdf_header = "header_pdf_exporter:HeaderPDFExporter"

[tool.setuptools.package-data]
"header_pdf_exporter.templates.latex_header" = ["conf.json", "index.tex.j2"]